<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.sshtools</groupId>
	<artifactId>push-sftp-group</artifactId>
	<version>0.1.2-SNAPSHOT</version>
	<packaging>pom</packaging>
	<properties>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maverick.synergy.version>3.1.0-SNAPSHOT</maverick.synergy.version>
		<install4j.home>_SET_IN_HOME_DOT_JADAPTIVE_DOT_BUILD_DOT_PROPERTIES_</install4j.home>
		<install4j.licenseKey>_SET_IN_HOME_DOT_JADAPTIVE_DOT_BUILD_DOT_PROPERTIES_</install4j.licenseKey>
		<install4j.appleId>_SET_IN_HOME_DOT_JADAPTIVE_DOT_BUILD_DOT_PROPERTIES_</install4j.appleId>
		<install4j.appleIdPassword>_SET_HOME_IN_DOT_JADAPTIVE_DOT_BUILD_DOT_PROPERTIES_</install4j.appleIdPassword>
		<!-- For configuring Install4J -->
		<build.phase>continuous</build.phase>
		<build.mediaTypes>windows,unixInstaller,macos,macosFolder,windowsArchive,unixArchive,linuxRPM,linuxDeb,macosArchive,macosFolderArchive</build.mediaTypes>
		<build.arch>${os.arch}</build.arch>
		<build.platform>${build.os.family}-${os.arch}</build.platform>
	</properties>
	<modules>
		<module>push-sftp</module>
		<module>push-sftp-gui</module>
	</modules>
	<profiles>
		<profile>
			<id>mac-build</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<build.os.family>macos</build.os.family>
			</properties>
		</profile>
		<profile>
			<id>linux-build</id>
			<activation>
				<os>
					<family>linux</family>
				</os>
			</activation>
			<properties>
				<build.os.family>linux</build.os.family>
			</properties>
		</profile>
		<profile>
			<id>windows-build</id>
			<activation>
				<os>
					<family>windows</family>
				</os>
			</activation>
			<properties>
				<build.os.family>windows</build.os.family>
			</properties>
		</profile>
	</profiles>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.sshtools</groupId>
				<artifactId>maverick-synergy-client</artifactId>
				<version>${maverick.synergy.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sshtools</groupId>
				<artifactId>maverick-bc</artifactId>
				<version>${maverick.synergy.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sshtools</groupId>
				<artifactId>maverick-sshagent</artifactId>
				<version>${maverick.synergy.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sshtools</groupId>
				<artifactId>maverick-sshagent-jdk16-sockets</artifactId>
				<version>${maverick.synergy.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sshtools</groupId>
				<artifactId>maverick-sshagent-named-pipes</artifactId>
				<version>${maverick.synergy.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<executions>
					<!-- The build number. This will be set to ZERO if BUILD_NUMBER is not 
						set. Jenkins will set BUILD_NUMBER, or you can set it in the environment 
						before running maven for build testing. -->
					<execution>
						<id>build-number-property</id>
						<goals>
							<goal>regex-property</goal>
						</goals>
						<phase>initialize</phase>
						<configuration>
							<!-- Set build.number to zero if it is blank. This uses a bit of regular 
								expression trickery. Because Jenkins supplies BUILD_NUMBER as an environment 
								variable, and we also want the build to work outside of Jenkins, then the 
								below is used to set build.number to zero if BUILD_NUMBER is not set. There 
								is no easy way to do this with basic Maven, and build-helper doesn't like 
								empty variables either, so we prefix it with zero, then use capture groups 
								to correct the format for both situations -->
							<name>product.version</name>
							<value>${project.version}</value>
							<regex>^([0-9]+)\.([0-9]+)\.([0-9]+)-([0-9A-Za-z]+)$</regex>
							<replacement>$1.$2.$3</replacement>
							<failIfNoMatch>false</failIfNoMatch>
						</configuration>
					</execution>
					<execution>
						<id>product-version-property</id>
						<goals>
							<goal>regex-property</goal>
						</goals>
						<phase>initialize</phase>
						<configuration>
							<!-- Strip off -SNAPSHOT (or other suffix) -->
							<name>build.number</name>
							<value>0${env.BUILD_NUMBER}</value>
							<regex>^(?:0?)([0-9]+)(?:\$\{env\.BUILD_NUMBER\})?$</regex>
							<replacement>$1</replacement>
							<failIfNoMatch>false</failIfNoMatch>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.15.0</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>properties-maven-plugin</artifactId>
					<version>1.0.0</version>
					<executions>
						<execution>
							<phase>initialize</phase>
							<goals>
								<goal>read-project-properties</goal>
							</goals>
							<configuration>
								<quiet>true</quiet>
								<files>
									<file>${basedir}/jadaptive.build.properties</file>
									<file>${user.home}/.jadaptive.build.properties</file>
								</files>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.10.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.5.0</version>
				</plugin>
				<plugin>
					<groupId>com.install4j</groupId>
					<artifactId>install4j-maven</artifactId>
					<version>10.0.4</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>1.8</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<repositories>
		<repository>
			<id>oss-snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<snapshots />
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
		<repository>
			<id>sshtools-releases</id>
			<name>sshtools-releases</name>
			<releases />
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<url>https://artifactory.jadaptive.com/public-releases</url>
		</repository>
		<repository>
			<id>sshtools-snapshots</id>
			<name>sshtools-snapshots</name>
			<snapshots />
			<releases>
				<enabled>false</enabled>
			</releases>
			<url>https://artifactory.jadaptive.com/public-snapshots</url>
		</repository>
		<repository>
			<id>ext-snapshots-local</id>
			<name>ext-snapshots-local</name>
			<snapshots />
			<releases>
				<enabled>false</enabled>
			</releases>
			<url>https://artifactory.jadaptive.com/ext-snapshots-local</url>
		</repository>
		<repository>
			<id>ej-technologies</id>
			<url>https://maven.ej-technologies.com/repository</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>ej-technologies</id>
			<url>https://maven.ej-technologies.com/repository</url>
		</pluginRepository>
	</pluginRepositories>
</project>
